--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: tydenet                        # Title in top navigation bar (navbar) and <head>
 description: Type deposition network analysis # Site description in <head>
 author: Nicky Nicolson                    # Used for copyright statement in footer
-baseurl: "/website"                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
+baseurl: "/"                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
                                         # A baseurl affects internal links, see http://peterdesmet.github.io/petridish/markdown/#links
 
