--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ twitter_username: nickynicolson           # Social icon in footer
 github_username: nickynicolson            # Social icon in footer
 
 # THEME SETTINGS (ALL OPTIONAL)
-posts_on_home: 3                        # Show x number of latest posts on homepage, can be 0
-tweets_on_home: true                    # Show Twitter feed of twitter_username on homepage
+posts_on_home: 0                        # Show x number of latest posts on homepage, can be 0
+tweets_on_home: false                    # Show Twitter feed of twitter_username on homepage
 archive_permalink: /blog/               # Permalink of page using archive.html layout, required when using post categories
 colors:
   links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
